--- a/src/css/imports/_cover.css
+++ b/src/css/imports/_cover.css
@@ -13,6 +13,7 @@
     background-position: center center;
     background-size: cover;
     padding: 4em 0;
+    min-height: 14em;
 
     @media screen and (--hd) {
         margin: 0 -var(--padding-hd);
@@ -48,7 +49,7 @@
     color: #ffffff;
     text-align: center;
     font-size: 2.5em;
-    text-shadow: 0 1px 3px rgba(0,0,0,.3);
+    text-shadow: 2px 2px 0px rgba(0,0,0,.35);
     padding: 0 var(--global-padding);
     margin: 0;
 
