--- a/src/css/imports/_why-visyond.css
+++ b/src/css/imports/_why-visyond.css
@@ -1,13 +1,3 @@
-.primary {
-    background: #eef6ff;
-    margin: 0 -var(--global-padding);
-}
-
-.section {
-    padding: 6em 0;
-    text-align: center;
-}
-
 /*
   Need table-wrapper for border-radius
 */
